--- a/.gitignore
+++ b/.gitignore
@@ -4,113 +4,94 @@
 *.log
 *.pyc
 *.swp
+*.tmp
+*.bak
+.DS_Store
 .buildlog/
 .history
 
-
-
-# Flutter repo-specific
-/bin/cache/
-/bin/internal/bootstrap.bat
-/bin/internal/bootstrap.sh
-/bin/mingit/
-/dev/benchmarks/mega_gallery/
-/dev/bots/.recipe_deps
-/dev/bots/android_tools/
-/dev/devicelab/ABresults*.json
-/dev/docs/doc/
-/dev/docs/flutter.docs.zip
-/dev/docs/lib/
-/dev/docs/pubspec.yaml
-/dev/integration_tests/**/xcuserdata
-/dev/integration_tests/**/Pods
-/packages/flutter/coverage/
-version
-analysis_benchmark.json
-
-# packages file containing multi-root paths
-.packages.generated
+# Flutter repo-specific (only needed if you're modifying the Flutter SDK itself)
+# You can ignore this section in app projects unless needed
 
 # Flutter/Dart/Pub related
-**/doc/api/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
-**/generated_plugin_registrant.dart
 .packages
-.pub-preload-cache/
 .pub/
+.pub-preload-cache/
+**/doc/api/
 build/
+generated_plugin_registrant.dart
+coverage/
+.flutter-versions
+
+# Assets and linked specs
 flutter_*.png
 linked_*.ds
 unlinked.ds
 unlinked_spec.ds
 
-# Android related
-**/android/**/gradle-wrapper.jar
-.gradle/
-**/android/captures/
-**/android/gradlew
-**/android/gradlew.bat
-**/android/local.properties
-**/android/**/GeneratedPluginRegistrant.java
-**/android/key.properties
+# Platform-specific build files
+
+## Android
+android/.gradle/
+android/app/debug/
+android/app/profile/
+android/app/release/
+android/gradlew
+android/gradlew.bat
+android/local.properties
+android/key.properties
 *.jks
 
-# iOS/XCode related
-**/ios/**/*.mode1v3
-**/ios/**/*.mode2v3
-**/ios/**/*.moved-aside
-**/ios/**/*.pbxuser
-**/ios/**/*.perspectivev3
-**/ios/**/*sync/
-**/ios/**/.sconsign.dblite
-**/ios/**/.tags*
-**/ios/**/.vagrant/
-**/ios/**/DerivedData/
-**/ios/**/Icon?
-**/ios/**/Pods/
-**/ios/**/.symlinks/
-**/ios/**/profile
-**/ios/**/xcuserdata
-**/ios/.generated/
-**/ios/Flutter/.last_build_id
-**/ios/Flutter/App.framework
-**/ios/Flutter/Flutter.framework
-**/ios/Flutter/Flutter.podspec
-**/ios/Flutter/Generated.xcconfig
-**/ios/Flutter/ephemeral
-**/ios/Flutter/app.flx
-**/ios/Flutter/app.zip
-**/ios/Flutter/flutter_assets/
-**/ios/Flutter/flutter_export_environment.sh
-**/ios/ServiceDefinitions.json
-**/ios/Runner/GeneratedPluginRegistrant.*
+## iOS & macOS
+ios/Flutter/
+ios/Pods/
+ios/Runner.xcworkspace/
+ios/build/
+ios/.symlinks/
+ios/.generated/
+ios/Flutter/ephemeral/
+ios/Flutter/flutter_export_environment.sh
+macos/Flutter/ephemeral/
+macos/Pods/
+macos/build/
 
-# macOS
-**/Flutter/ephemeral/
-**/Pods/
-**/macos/Flutter/GeneratedPluginRegistrant.swift
-**/macos/Flutter/ephemeral
-**/xcuserdata/
+## Linux
+linux/build/
+linux/flutter/ephemeral/
 
-# Windows
-**/windows/flutter/generated_plugin_registrant.cc
-**/windows/flutter/generated_plugin_registrant.h
-**/windows/flutter/generated_plugins.cmake
+## Windows
+windows/build/
+windows/flutter/ephemeral/
 
-# Linux
-**/linux/flutter/generated_plugin_registrant.cc
-**/linux/flutter/generated_plugin_registrant.h
-**/linux/flutter/generated_plugins.cmake
+## Fuchsia
+fuchsia/.dart_tool/
 
-# Coverage
-coverage/
+# Xcode
+**/*.xcodeproj/
+**/*.xcworkspace/
+**/*.xcuserdata/
+**/*.xcuserstate
+**/*.xcassets/
 
-# Symbols
+# IDEs and tools
+.idea/
+.vscode/
+*.iml
+
+# Web
+web/.dart_tool/
+web/build/
+
+# Environment
+.env
+
+# Symbol files
 app.*.symbols
 
-# Exceptions to above rules.
+# Exceptions (preserve some files explicitly if needed)
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
 !**/ios/**/default.pbxuser
